@@ -186,7 +186,7 @@ nulloutput.devices.row2=0
 #stealth.layout.row1=NO_ROTATE
 
 #=========================
-#settings for Art-Net, Null output, Minidmx, UDP, TPM2 and Adavision
+#settings for Art-Net, Null output, Minidmx, UDP, TPM2, TPM2Net
 #=========================
 #output.resolution.x=8
 #output.resolution.y=8
@@ -284,18 +284,6 @@ nulloutput.devices.row2=0
 #do NOT FORGET to define the output resolution above!
 #=========================
 #minidmx.baudrate=115200
-
-#=========================
-#settings for adavision
-#do NOT FORGET to define the output resolution above!
-#=========================
-#define serial port 
-#  on Linux/OSX use names like "/dev/ttyUSB1"
-#  on Windows use names like "COM1"
-#adavision.serial.port=/dev/tty.Whatever
-
-#optional: define serial speed  
-#adavision.baudrate=115200
 
 
 #EOF
