@@ -16,6 +16,7 @@ Changelog v1.4.1 to v1.5.0
 -Fix ColorSet, rarely visible smoothness bug
 -Cleanup GUI, make grouping of controls more strict
 -Reduce filesize of distribution file, remove unneeded files
+-Remove support for Adavision product - does not exist anymore
 -Update PixConCli, improve message handling
 -Update Fire Generator, remove visible random pixels 
 -Update PixelInvaders firmware, use the TPM2Net protocol to send data 
